2009-07-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFont.c (TkUnderlineAngledTextLayout): [Bug 2356057]:
	Corrected drawing of rotated underlines.

2009-07-21  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tkFont.c: [Bug 2328657]: Explicitly exclude hacky zero-char
	chunks from intersection computation. Might deserve generalization to
	other tests.

2009-07-20  Donal K. Fellows  <dkf@users.sf.net>

	* tests/clipboard.test (clipboard-6.2): [Bug 2824378]: Corrected
	result of test in light of changes to binary selection retrieval.

2009-07-18  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixSelect.c (SelCvtFromX32, SelCvtFromX8): Make the
	incremental transfer of binary selections work get deserialized
	correctly. Thanks to Emiliano Gavilan for detecting.

2009-07-18  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in:		Define NDEBUG in optimized (non-
					symbols) build to disable assert()s.

	* macosx/tkMacOSXBitmap.c:	[Bug 2821318]: Fix tk::mac::iconBitmap
					crash due to off-by-one ckalloc error.

2009-07-15  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/ttkMacOSXTheme.c:	[Patch 2819620]: Update notebook tab
	* library/ttk/aquaTheme.tcl:	appearance to modern L&F; adjust tab &
					notebook padding and tabmargins;
					correct appearance of selected tree
					header; add support for native tree
					header sort arrows via user1 state.

	* library/demos/mclist.tcl:	Use native sort arrows with aqua theme

2009-07-15  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixSelect.c (TkSelEventProc, SelRcvIncrProc, SelCvtFromX8):
	[Bug 2821962]: Make byte sequence selection transfers possible.

2009-07-14  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n (WINDOW ITEMS): [Bug 2326602]: Corrected definition of
	the -height and -width options for these items.

	* unix/configure.in: [Bug 2496018]: Allow the disabling of the use of
	XScreenSaver at configuration time, so as to permit better control of